--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,5 +19,16 @@ jobs:
           start: npm start
           build: npm run test
           browser: chrome
+      - uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+
 
     
