--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,5 +30,24 @@ jobs:
           name: cypress-videos
           path: cypress/videos
 
+      - name: Install dependencies Lighthouse
+        run: npm install -g @lhci/cli
+
+      - name: Run Lighthouse CI
+        run: |
+          lhci autorun \
+            --url=https://www.businessinsider.com/ \
+            --upload.target=temporary-public-storage \
+            --collect.url=https://www.businessinsider.com/ \
+            --collect.staticDistDir=./ \
+            --collect.numberOfRuns=3 \
+            --assert.budgets.performance=90 \
+            --assert.budgets.accessibility=90 \
+            --assert.budgets.best-practices=90 \
+            --assert.budgets.seo=90 \
+            --assert.budgets.pwa=90 \
+            --assert.assertions=performance-budget,accessibility,best-practices,seo,pwa \
+            --assert.upload=true
+
 
     
