reorganize cypress.yml file

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,13 +12,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Cypress build
-        id: cypress
-        uses: cypress-io/github-action@v4
-        with:
-          start: npm start
-          build: npm run test
-          browser: chrome
+      - name: Cypress test
+        run: npm run test
+
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -30,7 +26,13 @@ jobs:
           name: cypress-videos
           path: cypress/videos
 
-      - name: Install dependencies Lighthouse
+  lighthouse-ci:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
         run: npm install -g @lhci/cli
 
       - name: Run Lighthouse CI
@@ -48,6 +50,3 @@ jobs:
             --assert.budgets.pwa=90 \
             --assert.assertions=performance-budget,accessibility,best-practices,seo,pwa \
             --assert.upload=true
-
-
-    
